k8s/00-vault/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    istio-injection: enabled
