k8s/00-vault/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vault-ui
  namespace: vault
spec:
  hosts:
  - vault.k8s.mbell.dev
  gateways:
  - mesh
  - istio-system/ingressgateway
  http:
  - route:
    - destination:
        host: vault-ui.vault.svc.cluster.local
        port:
          number: 8200
