k8s/00-vault/policy.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-vault-ui
  namespace: vault
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"
  selector:
    matchLabels:
      app.kubernetes.io/instance: vault
      component: server
